--- a/TourPlanner/src/main/resources/org/tourplanner/main-view.fxml
+++ b/TourPlanner/src/main/resources/org/tourplanner/main-view.fxml
@@ -53,45 +53,15 @@
   </top>
 
   <center>
-  <GridPane prefHeight="200.0" prefWidth="400.0">
-    <columnConstraints>
-      <ColumnConstraints hgrow="NEVER"/>
-      <ColumnConstraints hgrow="ALWAYS"/>
-      <ColumnConstraints hgrow="NEVER"/>
-      <ColumnConstraints hgrow="NEVER"/>
-    </columnConstraints>
-    <rowConstraints>
-      <RowConstraints vgrow="NEVER"/>
-      <RowConstraints vgrow="ALWAYS"/>
-      <RowConstraints vgrow="NEVER"/>
-    </rowConstraints>
-
-    <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-    </padding>
-
-    <Label text="Enter new Route:" minWidth="90"
-           maxWidth="Infinity"
-           GridPane.hgrow="ALWAYS" styleClass="label-white">
-      <GridPane.margin>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-      </GridPane.margin>
-    </Label>
-    <TextField fx:id="newRouteNameField" minWidth="50" GridPane.columnIndex="1">
-      <GridPane.margin>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-      </GridPane.margin>
-    </TextField>
-    <TextField fx:id="newRouteDistanceField"  minWidth="64" GridPane.columnIndex="2"/>
-    <Button onAction="#onAddButtonClick" text="_Add" GridPane.columnIndex="3" minWidth="64" styleClass="action-button">
-      <GridPane.margin>
-        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-      </GridPane.margin>
-    </Button>
-    <ListView fx:id="routeList" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="1"/>
-    <Button onAction="#onExitButtonClick" text="E_xit" GridPane.columnSpan="4" GridPane.halignment="CENTER"
-            GridPane.rowIndex="2" minWidth="64" styleClass="action-button"/>
-  </GridPane>
+    <VBox spacing="10">
+      <padding>
+        <Insets top="10.0" right="10.0" bottom="10.0" left="10.0"/>
+      </padding>
+      <fx:include source="route-input.fxml"/>
+      <ListView fx:id="routeList"/>
+      <Button onAction="#onExitButtonClick" text="E_xit" minWidth="64"/>
+    </VBox>
   </center>
+
 </BorderPane>
 
