--- a/TourPlanner/src/main/resources/org/tourplanner/tour-detail.fxml
+++ b/TourPlanner/src/main/resources/org/tourplanner/tour-detail.fxml
@@ -13,6 +13,7 @@
     <HBox spacing="10">
         <Button fx:id="editButton" styleClass="action-button" text="Edit" onAction="#onEditButtonClicked"/>
         <Button fx:id="deleteButton" styleClass="danger-button" text="Delete" onAction='#onDeleteButtonClicked'/>
+        <Button fx:id="addLogButton" styleClass="action-button" text="Add Log" onAction="#onAddLogButtonClicked"/>
     </HBox>
 
     <Label fx:id="titleLabel" styleClass="tour-title" />
