--- a/TourPlanner/src/main/resources/org/tourplanner/mainStyle.css
+++ b/TourPlanner/src/main/resources/org/tourplanner/mainStyle.css
@@ -19,18 +19,47 @@
     -fx-padding: 6px 12px;
 }
 
+/*
 .danger-button {
     -fx-background-color: #e53935;
     -fx-text-fill: white;
     -fx-font-weight: bold;
     -fx-background-radius: 4px;
     -fx-padding: 6px 12px;
+}*/
+
+.danger-button {
+    -fx-background-color: #ef4444;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-background-radius: 6;
+    -fx-padding: 6 14;
 }
 
 .action-button:hover,
 .danger-button:hover {
     -fx-opacity: 0.85;
     -fx-cursor: hand;
+}
+
+/* Black Button with white font */
+.primary-button {
+    -fx-background-color: #1f2937;
+    -fx-text-fill: white;
+    -fx-font-weight: bold;
+    -fx-background-radius: 6;
+    -fx-padding: 6 14;
+}
+
+/* White Button with black font */
+.secondary-button {
+    -fx-background-color: white;
+    -fx-text-fill: #1f2937;
+    -fx-border-color: #d1d5db;
+    -fx-border-width: 1;
+    -fx-font-weight: bold;
+    -fx-background-radius: 6;
+    -fx-padding: 6 14;
 }
 
 /* === Search Bar === */
